# claude-recall

./: LICENSE  README.md  install.sh  pyproject.toml
skill/: SKILL.md
src/claude_recall/: __init__.py  __main__.py  cli.py  config.py  db.py  embedder.py  indexer.py  llm_reranker.py  logger.py  models.py  searcher.py  tui.py  updater.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_indexer.py  test_integration.py  test_search_quality.py  test_searcher.py  test_utils.py
